# profesor

./: .clippy.toml  .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  pmat-quality.toml  pmat.toml
.github/workflows/: ci.yml  lint.yml  nightly-bench.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/part1/: core-principles.md  jidoka.md  kaizen.md  mieruka.md  poka-yoke.md  tdd-philosophy.md
book/src/part2/: crate-structure.md  system-overview.md
book/src/part3/: quiz-overview.md
courses/rust-fundamentals/: course.yaml
courses/rust-fundamentals/module-01/: lab-01.yaml  lesson-01.yaml  lesson-02.yaml  quiz-01.yaml
crates/profesor/: Cargo.toml
crates/profesor-core/: Cargo.toml
crates/profesor-core/benches/: benchmarks.rs
crates/profesor-core/src/: course.rs  ids.rs  lab.rs  lib.rs  progress.rs  quiz.rs
crates/profesor-lab/: Cargo.toml
crates/profesor-lab/src/: feedback.rs  lib.rs  runner.rs  sandbox.rs
crates/profesor-quiz/: Cargo.toml
crates/profesor-quiz/src/: engine.rs  grader.rs  lib.rs
crates/profesor-sim/: Cargo.toml
crates/profesor-sim/src/: lib.rs  physics.rs  render.rs  state.rs
crates/profesor/examples/: course_demo.rs  physics_demo.rs  quiz_demo.rs
crates/profesor/src/: app.rs  lib.rs  wasm.rs
crates/profesor/tests/: integration.rs
docs/: profesor-spec.md
